Clean base Streamlit app

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit
-pytesseract
-pdf2image
-pillow
 pandas
-groq
+pillow
+pytesseract
+pdfplumber
+opencv-python-headless
 python-dotenv
+groq
